--- a/Site/usr/templates/default3/themes/blackwidow.less
+++ b/Site/usr/templates/default3/themes/blackwidow.less
@@ -1,27 +1,22 @@
-// @version: $Id: default.css 4387 2015-02-19 12:24:35Z Radek Suski $
 // @package: SobiPro Component for Joomla!
-//
+
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
-//
+
 // @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
 // See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
-//
+
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-//
-// $Date: 2015-02-19 13:24:35 +0100 (Thu, 19 Feb 2015) $
-// $Revision: 4387 $
-// $Author: Sigrid Suski $
 
 
-// Cornflower color theme (Blue)
-// use cornflower for @colour-set in theme.less
+// Blackwidow color theme (black; light on dark)
+// Use blackwidow for @colour-set in theme.less
 // ------------------------------------------------
 
 @base-color: #E5E5E5;
@@ -31,8 +26,5 @@
 @active-color: #FFFFFF;
 @alert-color: #B7B7B7;
 
+@back-color: #000000;
 @inverse: inverse;
-
-.body .container {
-    background-color: #000000;
-}
