--- a/Site/usr/templates/default3/themes/blackwidow.less
+++ b/Site/usr/templates/default3/themes/blackwidow.less
@@ -23,8 +23,9 @@
 @text-color: #303030;
 @hover-color: #303030;
 @font-color: #FFFFFF;
-@active-color: #FFFFFF;
+@active-color: #fcca03;
 @alert-color: #B7B7B7;
+@important-color: #fcca03;
 
 @back-color: #000000;
 @inverse: inverse;
